[tool.poetry]
name = "backup-script"
version = "0.1.0"
description = "A simple backup script"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
black = "^19.10b0"
pydocstyle = "^5.0.2"
vulture = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
